# udpinvoke

./: .gitignore  CMakeLists.txt  README.md
include/udp/: allocator.h  bufferpool.h  endpoint.h  error.h  event.h  log.h  thread.h  udp_connection.h  udp_context.h  uuid.h
include/udplg/: cmdargs.h
include/udpserv/: udpserv.h
src/: allocator.c  bufferpool.c  endpoint.c  log.c  thread.c  udp_connection.c  udp_context.c  uuid.c
src/udplg/: udplg.c
src/udpserv/: udpserv.c
src/unity/: udp_unity.c
tests/: test.c  test.cpp
